# nurbs_rendering_engine

./: CMakeLists.txt  README.md  build.sh
inc/: CArray.h  CArray2D.h  CArrayTools.h  CBox.h  CCoordinateSystem.h  CDetector.h  CError.h  CIntersection.h  CIntersectionList.h  CMatrix3x3.h  CNurbs.h  CPhantom.h  CPhantomObject.h  CProjection.h  CScale.h  CSource.h  CVector3D.h  CudaTools.h
src/: CDetector.cpp  CError.cpp  CIntersection.cpp  CIntersectionList.cpp  CNurbs.cpp  CPhantom.cpp  CRayTracer.cpp  Source.cpp  main.cpp
